--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="./style.css">
+</head>
   <body>
-    
-    
+
+    <header class="container">
+
+                <img src="./media/logo.png" class="logo-custom d-flex mx-auto">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#"></a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav mx-auto">
+                          <a class="nav-link active px-4 aria-current="page" href="#">Primo link</a>
+                          <a class="nav-link px-4" href="#">Altro link</a>
+                          <a class="nav-link px-4" href="#">Terzo link</a>
+                          <a class="nav-link px-4" href="#">Ultimo link</a>
+                        </div>
+                      </div>
+                    </div>
+                  </nav>
+
+    </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
