--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
                   </nav>
 
     </header>
-
+<div class="container-fluid d-flex align-items-end justify-content-center bg_i vh-100">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h1 class="lorem">LOREM</h1>
+    </div>
+    <div class="col-12 mt-5">
+      <img src="./media/mountains2.png" alt="mountains2">
+    </div>
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
