--- a/index.html
+++ b/index.html
@@ -30,16 +30,32 @@
                   </nav>
 
     </header>
-<div class="container-fluid d-flex align-items-end justify-content-center bg_i vh-100">
+
+<!-- sezione main -->
+
+<div class="container-fluid vh-100 d-flex bg-custom-mio justify-content-center">
   <div class="row">
-    <div class="col-12 text-center">
-      <h1 class="lorem">LOREM</h1>
-    </div>
-    <div class="col-12 mt-5">
-      <img src="./media/mountains2.png" alt="mountains2">
-    </div>
+    <div class="col-12"></div>
+    <h1 class="lorem display-1">LOREM</h>
   </div>
 </div>
+<!-- fine sezione main -->
+
+<!-- inizio sezione lorem -->    
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p class=" text-center display-6 paragrafo my-5 font-size-custom">
+          <span class="colorDarkRed display-6 fw-bold">“</span>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas itaque fugit asperiores doloribus architecto aspernatur reprehenderit et facere earum iure quae mollitia ab cumque optio in, molestias modi iste ex?
+          <span class="colorDarkRed display-6 fw-bold"> „</span>
+        </p>
+      </div>
+      </div>
+    </div>
+  </div>
+<!-- fine sezione lorem -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
