--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
 <div class="container-fluid vh-100 d-flex bg-custom-mio justify-content-center">
   <div class="row">
-    <div class="col-12"></div>
-    <h1 class="lorem display-1">LOREM</h>
+    <div class="col-12 d-flex justify-content-center align-items-center">
+      <h1 class="lorem display-1  ">LOREM</h>
+    </div>
   </div>
 </div>
 <!-- fine sezione main -->
