--- a/index.html
+++ b/index.html
@@ -45,12 +45,10 @@
 <!-- inizio sezione lorem -->    
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <p class=" text-center display-6 paragrafo my-5 font-size-custom">
-          <span class="colorDarkRed display-6 fw-bold">“</span>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas itaque fugit asperiores doloribus architecto aspernatur reprehenderit et facere earum iure quae mollitia ab cumque optio in, molestias modi iste ex?
-          <span class="colorDarkRed display-6 fw-bold"> „</span>
-        </p>
+      <div class="col-12 d-flex">
+          
+          <p class="text-secondary display-5 text-center fst-italic "><span class="darkred display-3 fw-bold ">“</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas itaque fugit asperiores doloribus architecto aspernatur reprehenderit et facere earum iure quae<span class="darkred display-3 fw-bold ">„</span></p>
+          
       </div>
       </div>
     </div>
