--- a/index.html
+++ b/index.html
@@ -57,41 +57,41 @@
 
 <!-- inizio sezione con card -->
  <section>
-  <div class="container">
+  <div class="container-fluid mx-4 pt-5 ">
     <div class="row ">
-      <div class="col-12 col-lg-3">
-        <div class="card text-bg-light mb-3">
-          <div class="card-header">Header</div>
+      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
+        <div class="card border-light mb-3">
+          <i class="fa-regular fa-snowflake darkred display-5 text-center"></i>
           <div class="card-body">
             <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">lorem ipsum dolor</p>
           </div>
       </div>
       </div>
-      <div class="col-12 col-lg-3">
-        <div class="card text-bg-light mb-3">
-          <div class="card-header">Header</div>
-          <div class="card-body">
+      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
+        <div class="card border-light mb-3">
+          <i class="fa-solid fa-map darkred display-5 text-center"></i>
+          <div class="card-body ">
             <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">lorem ipsum dolor</p>
           </div>
       </div>
       </div>
-      <div class="col-12 col-lg-3">
-        <div class="card text-bg-light mb-3">
-          <div class="card-header">Header</div>
+      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
+        <div class="card border-light  mb-3">
+          <i class="fa-solid fa-mountain darkred display-5 text-center"></i>
           <div class="card-body">
             <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">lorem ipsum dolor</p>
           </div>
       </div>
       </div>
-      <div class="col-12 col-lg-3">
-        <div class="card text-bg-light mb-3">
-          <div class="card-header">Header</div>
+      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
+        <div class="card border-light d-flex justify-content-center mb-3">
+          <i class="fa-solid fa-campground darkred display-5 text-center"></i>
           <div class="card-body">
             <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">lorem ipsum dolor</p>
           </div>
       </div>
       </div>
@@ -99,7 +99,7 @@
   </div>
  </section>
 <!-- fine sezione card  -->
-
+    <script src="https://kit.fontawesome.com/6db9c43b68.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
