--- a/index.html
+++ b/index.html
@@ -59,47 +59,43 @@
  <section>
   <div class="container-fluid mx-4 pt-5 ">
     <div class="row ">
-      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
-        <div class="card border-light mb-3">
-          <i class="fa-regular fa-snowflake darkred display-5 text-center"></i>
-          <div class="card-body">
-            <h5 class="card-title">Light card title</h5>
-            <p class="card-text">lorem ipsum dolor</p>
-          </div>
-      </div>
-      </div>
-      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
-        <div class="card border-light mb-3">
-          <i class="fa-solid fa-map darkred display-5 text-center"></i>
-          <div class="card-body ">
-            <h5 class="card-title">Light card title</h5>
-            <p class="card-text">lorem ipsum dolor</p>
-          </div>
-      </div>
-      </div>
-      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
-        <div class="card border-light  mb-3">
+      <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
+        <i class="fa-regular fa-snowflake darkred display-5 text-center"></i>
+            <p class="py-3 px-5 bg-dangr border-line">lorem ipsum dolor</p>
+              <i class="fa-solid fa-code-commit fa-xl darkred display-5 text-center"></i>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
           <i class="fa-solid fa-mountain darkred display-5 text-center"></i>
-          <div class="card-body">
-            <h5 class="card-title">Light card title</h5>
-            <p class="card-text">lorem ipsum dolor</p>
+              <p class="py-3 px-5 bg-dangr border-line">lorem ipsum dolor</p>
+              <div class="circle"></div>
           </div>
-      </div>
-      </div>
-      <div class="col-12 col-lg-3 mx-auto d-flex justify-content-center">
-        <div class="card border-light d-flex justify-content-center mb-3">
-          <i class="fa-solid fa-campground darkred display-5 text-center"></i>
-          <div class="card-body">
-            <h5 class="card-title">Light card title</h5>
-            <p class="card-text">lorem ipsum dolor</p>
-          </div>
-      </div>
-      </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
+            <i class="fa-solid fa-map darkred display-5 text-center"></i>
+                <p class="py-3 px-5 bg-dangr border-line">lorem ipsum dolor</p>
+                <div class="circle"></div>
+            </div>
+      <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
+        <i class="fa-solid fa-campground darkred display-5 text-center"></i>
+            <p class="py-3 px-5 bg-dangr border-line">lorem ipsum dolor</p>
+            <div class="circle"></div>
+        </div>
     </div>
   </div>
  </section>
 <!-- fine sezione card  -->
+<!-- inizio seconda sezione -->
+<section class="container">
+  <div class="row">
+    <div class="col-12 col-lg-6">
+
+    </div>
+    <div class="col-12 col-lg-6">
+
+    </div>
+  </div>
+</section>
     <script src="https://kit.fontawesome.com/6db9c43b68.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
+
