svarionate con le righe

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
       <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
         <i class="fa-regular fa-snowflake darkred display-5 text-center"></i>
             <p class="py-3 px-5 bg-dangr border-line">lorem ipsum dolor</p>
-              <i class="fa-solid fa-code-commit fa-xl darkred display-5 text-center"></i>
+            <div class="circle cerchio"><div class="lorem-border"></div></div>
         </div>
         <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
           <i class="fa-solid fa-mountain darkred display-5 text-center"></i>
               <p class="py-3 px-5 bg-dangr border-line">lorem ipsum dolor</p>
-              <div class="circle"></div>
+              <i class="gg-git-commit"></i>
           </div>
           <div class="col-12 col-md-6 col-lg-3 d-flex align-items-center text-center flex-column">
             <i class="fa-solid fa-map darkred display-5 text-center"></i>
