--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="container-fluid vh-100 d-flex bg-custom-mio justify-content-center">
   <div class="row">
     <div class="col-12 d-flex justify-content-center align-items-center">
-      <h1 class="lorem display-1  ">LOREM</h>
+      <h1 class="lorem display-1">LOREM</h>
     </div>
   </div>
 </div>
@@ -97,5 +97,38 @@
     <script src="https://kit.fontawesome.com/6db9c43b68.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
+  <!-- footer -->
+  <footer class="bgdr">
+    <section>
+      <div class="container-fluid d-flex justify-content-center">
+        <div class="row">
+          <div class="col-12">
+            <h3 class="text-light display-5 pt-5 mx-5 my-0 l_orem d-flex">LOREM</h3>
+          </div>
+          <div class="col-9 mx-5 pt-0">
+              <h4 class="text-light">Testo Generico</h4>
+              <article class="text-light">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat atque aperiam odit sapiente dolor animi aspernatur placeat asperiores. Vel necessitatibus est harum odio minima et ipsum eligendi nesciunt ad suscipit!
+              </article>
+              <article class="text-light pt-3">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat atque aperiam odit sapiente dolor animi aspernatur placeat asperiores. Vel necessitatibus est harum odio minima et ipsum eligendi nesciunt ad suscipit!
+              </article>
+            </div>
+            <div class="col-2 ps-5">
+              <h3 class="text-light">
+                Quik Link
+              </h3>
+              <ul class="p-4">
+                <li class="m-0 text-light">Quik Link</li>
+                <li class="m-0 text-light">Quik Link</li>
+                <li class="m-0 text-light">Quik Link</li>
+                <li class="m-0 text-light">Quik Link</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </footer>
 </html>
 
